# minori

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.yml
api/: .dockerignore  .pylintrc  Dockerfile  alembic.ini  setup.cfg  setup.py
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 032f7dabb202_second_data_migration_attempt.py  7d646be4eed8_add_naming_convention_for_constraints.py  a2394423e5e6_adding_author_and_authoralias_tables.py  caf68ff29f0a_data_migration_of_album_authors.py  eb15233fcb26_mandating_the_author_alias.py
api/minori/: api.py  api_models.py  core_config.py  logger.py  util.py
api/minori/db/: __init__.py  connection.py  models.py
api/minori/routers/: albums.py  authoraliases.py  authors.py  images.py
kubernetes/prod/: migration.job.yml
kubernetes/test/: migration.job.yml
scripts/: bulk-import.py  regen-all-thumbnails.py  stub-import-config.py  upload.py
ui/: Dockerfile  album.html  author.html  authors.html  edit.html  index.html  list.html  view.html
ui/.ui/: config.json
ui/css/: minori.css
ui/js/: api.js  common.js  elems.js  models.js
ui/js/api/: albums.js  authoraliases.js  authors.js  base.js  images.js
ui/js/ui/: album.js  albumlist.js  author.js  authorlist.js  base.js  bookshelf.js  editalbum.js  image.js
