[metadata]
name = minori
version = 1.2.0
license = MIT
description = Image album gallery.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    aiofiles
    alembic>=1.13,<1.14
    asyncmy
    fastapi==0.110.0
    natsort
    sqlalchemy>=2,<2.1
    shortuuid
    Pillow
    python-multipart
    requests
